--- a/css/Contact.css
+++ b/css/Contact.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap');
@@ -15,7 +16,7 @@ nav {
     align-items: center;
 }
 
-nav button {
+nav button{
     background-color: #D6AF3B;
     border-radius: 10px;
     border: none;
@@ -23,6 +24,31 @@ nav button {
     width: 150px;
     font-size: 25px;
     font-family: 'Inter', sans-serif;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+
+
+ 
+}
+nav button:hover {
+    background-color: rgba(214, 175, 59, 0.7);
+    transform: scale(0.8); 
+    box-shadow: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); 
+
+}
+
+
+nav button:active {
+    transform: scale(1.05); 
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); 
+
+}
+nav button  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
 
 nav img {
@@ -126,6 +152,7 @@ nav .nav-links li a {
     nav button {
         display: none;
     }
+  
 }
 article img{
     max-width: 100%;
@@ -133,7 +160,7 @@ article img{
     filter: drop-shadow(20px 30px 20px 20px red);
 }
 
-.form h2, form p{
+.form h2, p{
     text-align: center;
     padding-top: 15px;
 }
@@ -184,47 +211,7 @@ form button{
 
 } */
 
-/* 
-article {
-    display: flex;
-    justify-content: center;  
-    align-items: center; 
-    flex-wrap: wrap;
-    flex-direction: column;          
-    gap: 20px; 
-    padding: 20px;
-    margin: 0 auto;          
-    max-width: 1200px;        
-    height: 100vh;            
-}
-aside{
-    display: flex;
-    flex-direction: column;
-}
 
-aside.form {
-    flex-basis: 100%;          
-    padding: 50px;
-    border-radius: 10px;
-}
-
-
-.form {
-    flex-basis: 50%;         
-}
-
-
-.form form {
-    display: flex;
-    flex-direction: column;
-}
-
-.inputs {
-    display: flex;
-    justify-content: space-between;
-    gap: 80px;
-  
-} */
 aside.form{
     display: none;
     justify-content: center;
@@ -514,8 +501,8 @@ details div {
 }
 
 details[open] div {
-    opacity: 1; /* Show content when open */
-    transform: translateY(0); /* Bring content back to normal position */
+    opacity: 1; 
+    transform: translateY(0); 
 }
 @media (max-width: 600px) {
     .all{
@@ -523,8 +510,8 @@ details[open] div {
         flex-direction: column;
     }
     details {
-        width: 90%; /* Ajuste la largeur pour les petits écrans */
-        font-size: 1.2rem; /* Réduit la taille de la police */
+        width: 90%; 
+        font-size: 1.2rem; 
     }
     summary {
         font-size: 1.2rem;
@@ -535,7 +522,7 @@ details[open] div {
 /* Écrans moyens (tablettes) */
 @media (max-width: 900px) {
     details {
-        width: 80%; /* Ajuste pour les écrans intermédiaires */
+        width: 80%; 
         font-size: 1.4rem;
     }
     summary {
