--- a/css/Projects.css
+++ b/css/Projects.css
@@ -26,21 +26,103 @@ body{
     height: auto;
     width: 100%;
 }
+nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #EFEFEF;
+    padding: 0px 10px;
+    align-items: center;
+}
+
+nav button{
+    background-color: #D6AF3B;
+    border-radius: 10px;
+    border: none;
+    height: 60px;
+    width: 150px;
+    font-size: 25px;
+    font-family: 'Inter', sans-serif;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+
+
+ 
+}
+nav button:hover {
+    background-color: rgba(214, 175, 59, 0.7);
+    transform: scale(0.8); 
+    box-shadow: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); 
+
+}
+
+
+nav button:active {
+    transform: scale(1.05); 
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); 
+
+}
+nav button  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+nav img {
+    width: 240px;
+    height: 100px;
+}
+
+nav .nav-links {
+    font-size: 25px;
+    list-style: none;
+    gap: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    display: block;
+}
+
+nav button {
+    display: block;
+}
+
+nav .nav-links li a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Itim', cursive;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .burger img {
     width: 45px;
     height: 45px;
-
 }
+
 .show {
+    display: block;
+}
+
+.hide {
     display: none;
 }
-.hide {display: none;}
+
 .mobile-menu {
     display: none;
     position: absolute;
     top: 100px;
     right: 0;
-    width: 20%;
+    width: 30%;
     height: 40%;
     background-color: #EFEFEF;
     z-index: 10;
@@ -52,7 +134,6 @@ body{
     color: black;
 }
 
-/* Visible when the burger is clicked */
 .mobile-menu.active {
     display: flex;
 }
@@ -62,8 +143,6 @@ body{
     padding: 0;
     margin: 20px 0;
     color: black;
-    z-index: 100;
-
 }
 
 .mobile-menu li {
@@ -77,66 +156,20 @@ body{
     font-family: 'Itim', cursive;
 }
 
+@media screen and (max-width: 768px) {
+    .show {
+        display: block;
+    }
 
-
-/* Responsive burger menu visible on smaller screens */
-
-nav {
-    display: flex   ;
-    justify-content: space-between;
-    background-color: #EFEFEF;
-    padding: 0px 10px;
-    align-items: center;
-
-
-}
-nav button{
-    background-color: #D6AF3B;
-    border-radius: 10px;
-    border: none;
-    height: 60px;
-    width: 150px;
-    font-size: 25px;
-    font-family: 'Inter', sans-serif;
-
+    nav .nav-links {
+        display: none;
+    }
  
-}
-nav img{
-    width: 240px;
-    height: 100px;
-}
-nav .nav-links {
-    font-size: 25px;
-    list-style: none;
-    gap: 50px;
-    display: flex;
-    justify-content: space-between;
-align-items: center;
-
-}
-nav ul {
-    display: block;
-}
-nav button {
-    display: block;
-}
-nav .nav-links li a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Itim', cursive;
-
-}
-.burger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.burger div {
-    width: 25px;
-    height: 3px;
-    background-color: black;
+    .burger {display: block;
+        gap: 5px;}
+    nav button {
+        display: none;
+    }
 }
 .head {
     display: flex;
@@ -186,16 +219,18 @@ nav .nav-links li a{
     justify-content: center;
 }
 .gride{
-  width: 80%;
+  width: 100%;
   height: 100%;
-  display: grid;
-  justify-content: space-between;
-  grid-template-columns: repeat(3,400px);
-  margin-top: 70px;
-  margin-left: 157px;
-  gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  /* margin-top: 70px; */
+  /* margin-left: 157px; */
+ 
   
 }
+
 .gride img{
     border-radius: 9px;
 }
@@ -224,8 +259,7 @@ nav .nav-links li a{
 
 
 .savingimg1{
-    height: auto;
-    width: 100%;
+    height: 100%;
     box-shadow :3px 5px 5px   #D6AF3B;
 }
 .savingimg1 img{
@@ -259,62 +293,7 @@ nav .nav-links li a{
     margin-top: 50px;
     padding-top: 8px;
 }
-footer {
-    width: 100%;
-    height: 400px;
-    background-color: black;
-    display: flex;
-    color: white;
-    flex-direction: column;
-    margin-top: 20%;
- 
-}
-footer .footer-logo{
-    padding-left: 20px;
-}
-footer .footer-details{
-    display: flex;
-    justify-content: space-around;
-    padding: 0 20px;
-    position: relative;
-}
-footer .footer-details ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-
-
- 
-}
-.footer-logo {
-    width: 100%;
-}
-footer .footer-details .explore{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-footer .footer-details  h3 {
-  font-family: 'Itim', cursive; 
-  font-weight: bold;
-  margin-bottom: 10px;
-
-}
-footer .sponsor .m {
-    height: 100px;
-    width: 120px;
-}
-footer .sponsor .v {
-    height: 45px;
-    width: 120px;
-}
-
-.sponsor{
-    display: flex;
-    flex-direction: column;
-}
+/*Tableettee mode */
 @media (min-width: 768px) and (max-width: 1023px) {
     nav {
         flex-direction: row; 
@@ -343,36 +322,107 @@ footer .sponsor .v {
 }
 
 @media (max-width: 767px) {
-    nav {
-        flex-direction: column; 
-        align-items: center; 
-    }
-    nav .nav-links {
-        flex-direction: column; 
-        gap: 20px; 
-    }
-    nav img {
-        width: 150px; 
-        height: auto; 
-    }
+   
     .gride {
         grid-template-columns: 1fr; 
-        margin-left: 45px; 
         gap: 20px; 
     }
     .whorwe {
         font-size: medium; 
     }
+    .head {
+        display: flex;
+        flex-direction: column;
+    }
+    .head div{
+        width: 80%;
+    }
+
+ 
     
-    footer {
-        flex-direction: column; 
-        align-items: center; 
-    }
+}
+footer {
+    width: 100%;
+    height: 420px;
+    background-color: black;
+    display: flex;
+    color: white;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+footer span {
+    padding-left: 20px;
+}
+
+span img {
+    height: 120px;
+    width: 25%;
+}
+
+footer .footer-details {
+    display: flex;
+    justify-content: space-around;
+    padding: 0 20px;
+    position: relative;
+    font-size: 25px;
+}
+
+footer .footer-details ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+footer .footer-details .explore {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+footer .footer-details h3 {
+    font-family: 'Itim', cursive;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+footer .sponsor .m {
+    height: 100px;
+    width: 100%;
+}
+
+footer .sponsor .v {
+    height: 45px;
+    width: 100%;
+}
+
+.sponsor {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
     footer .footer-details {
-        flex-direction: column; 
-        align-items: center; 
+        font-size: 10px;
     }
-    footer .footer-details ul {
-        padding: 0; 
+    footer {
+        height: 280px;
+    }
+    .sponsor {
+        align-items: center;
+        margin-top: -25px;
+    }
+    span img {
+        height: 80px;
+        width: 50%;
+    }
+    footer .sponsor .m {
+        width: 50%;
+        height: 50%;
+    }
+    footer .sponsor .v {
+        width: 90%;
+        height: 10%;
     }
 }
