--- a/css/Apropos.css
+++ b/css/Apropos.css
@@ -4,34 +4,338 @@
 @import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
 
 
-<<<<<<< HEAD
+    
+
 h1{
     margin: 0;
+}
+ul {
+    margin-block: 0;
+    padding-inline-start: 0;
+    gap: 10px;
 }
 body{
     margin: 0;
     height: 100vh;
     width: 100%;
 }
+/* Section Title for "Who We Are"*/
+.sec-title{
+    margin-right: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+    position: relative;
+    top: 30px;
+}
+
+.sec-title h2{
+    margin-right: 42%;
+    flex-direction: row-reverse;
+    justify-content: center;
+    font-size: 32px;
+    font-family: 'Arial Rounded MT Bold', sans-serif;
+}
+
+.sec-title hr {
+    display: flex;
+    background-color: black;
+    border: 2px solid;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 43%;
+
+}
+/*Info Section: Contains Text and Image*/
+.info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+    height: 100vh; 
+    margin-top: -6%;
+}
+/* Text Section: Description of FutureBank's mission and history*/
+.text {
+    font-size: 35px;
+    font-family: "Inter", sans-serif;
+}
+
+.text p{
+    font-family: "Inter", sans-serif;
+    font-size: 39px;
+    margin-left: 2%;
+    
+}
+/*Image Section: Visual representation for the "Who We Are" section*/
+.image {
+    text-align: center;
+}
+
+.image img {
+    max-width: 100%;
+    height: auto;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+/*Section Background for "Why You Should Use FutureBank"*/
+.back{
+    background-color: #D6AF3B;
+    width: 72%;
+    height: 86%;
+    margin-left: 50px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+/*Title Section: Header for the reasons to use FutureBank*/
+.min-back h3{
+    font-family: 'Arial Rounded MT Bold', sans-serif;
+    margin-left: 4%;
+    position: relative;
+    top: 22px;
+    font-size: 40px;
+}
+/*Text Section: Details about the advantages of choosing FutureBank*/
+.back-text pre{
+    font-size: 36px;
+}
+/* <!-- Image Section: Visual related to FutureBank's offerings -->*/
+.back-img{
+    /* flex: 1; */
+    /* text-align: right; */
+    position: relative;
+    left: 17%;
+    bottom: 48%;
+}
+
+.back-img img{
+    text-align: right;
+    position: relative;
+    left: 34%;
+    bottom: 48%;
+}
+/* Section for "Our Team"*/
+.team{
+    margin-top: 0%;
+}
+/* Decorative Background for the team section*/
+.deu-back{
+    background-color: #D6AF3B;
+    width: 73%;
+    height: 520px;
+    position: relative;
+    bottom: -430px;
+    left: 250px;
+    border-radius: 6px;
+    z-index: -1;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.img-inf{
+    text-align: center;
+}
+
+.img-inf img{
+    position: relative;
+    top: -278px;
+    margin-right: 10%;
+    max-width: 80%;
+    height: auto;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.tri-back{
+    background-color: white;
+    width: 105%;
+    height: 420px;
+    border-radius: 6px;
+    border: #868383 solid 2px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+.our{
+    position: relative;
+    top: -462px;
+    left: 100px;
+    margin-right: 41%;
+}
+.our h3{
+    font-family: 'Arial Rounded MT Bold', sans-serif;
+    position: relative;
+    top: 99px;
+    left: 4%;
+    font-size: 36px;
+}
+
+.tri-back p{
+    font-size: 38px;
+    margin-left: 6px;
+    position: relative;
+    top: 36px;
+}
+
+.end{
+    margin-top: -130px;
+}
+
+
+.fin-back{
+    background-color: #D6AF3B;
+    width: 77%;
+    height: 520px;
+    position: relative;
+    bottom: -154px;
+    left: 252px;
+    border-radius: 6px;
+    z-index: -1;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.img-histo img{
+    max-width: 75%;
+    height: auto;
+    margin-left: 15%;
+    position: relative;
+    top: -547px;
+}
+
+.histo{
+    position: relative;
+    top: -760px;
+    left: 510px;
+    margin-right: 41%;
+}
+
+.histo h3{
+    font-family: 'Arial Rounded MT Bold', sans-serif;
+    font-size: 36px;
+    position: relative;
+    top: 100px;
+    right: 176px;
+    margin-left: 500px;
+}
+
+.histo-info{
+    background-color: white;
+    width: 890px;
+    height: 645px;
+    border-radius: 6px;
+    border: #868383 solid 2px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    
+}
+
+.histo-info p{
+    font-size: 43px;
+    margin: 0px;
+    position: relative;
+    top: 113px;
+    right: -7px;
+}
+    
 nav {
     display: flex;
-=======
+    justify-content: space-between;
+    background-color: #EFEFEF;
+    padding: 0px 10px;
+    align-items: center;
+}
+
+nav button {
+    background-color: #D6AF3B;
+    border-radius: 10px;
+    border: none;
+    height: 60px;
+    width: 150px;
+    font-size: 25px;
+    font-family: 'Inter', sans-serif;
+}
+
+nav img {
+    width: 240px;
+    height: 100px;
+}
+
+nav .nav-links {
+    font-size: 25px;
+    list-style: none;
+    gap: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    display: block;
+}
+
+nav button{
+    background-color: #D6AF3B;
+    border-radius: 10px;
+    border: none;
+    height: 60px;
+    width: 150px;
+    font-size: 25px;
+    font-family: 'Inter', sans-serif;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+
+
+ 
+}
+nav button:hover {
+    background-color: rgba(214, 175, 59, 0.7);
+    transform: scale(0.8); 
+    box-shadow: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); 
+
+}
+
+
+nav button:active {
+    transform: scale(1.05); 
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); 
+
+}
+nav button  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+nav .nav-links li a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Itim', cursive;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1000;
+}
 
 .burger img {
     width: 45px;
     height: 45px;
-
 }
+
 .show {
+    display: block;
+}
+
+.hide {
     display: none;
 }
-.hide {display: none;}
+
 .mobile-menu {
     display: none;
     position: absolute;
     top: 100px;
     right: 0;
-    width: 20%;
+    width: 30%;
     height: 40%;
     background-color: #EFEFEF;
     z-index: 10;
@@ -43,7 +347,6 @@ nav {
     color: black;
 }
 
-/* Visible when the burger is clicked */
 .mobile-menu.active {
     display: flex;
 }
@@ -53,8 +356,6 @@ nav {
     padding: 0;
     margin: 20px 0;
     color: black;
-    z-index: 100;
-
 }
 
 .mobile-menu li {
@@ -68,251 +369,368 @@ nav {
     font-family: 'Itim', cursive;
 }
 
+/*content*/
 
-
-/* Responsive burger menu visible on smaller screens */
-
-nav {
-    display: flex   ;
->>>>>>> bb2b8f028dd327719162f782f1ac619674df1d0d
-    justify-content: space-between;
-    background-color: #EFEFEF;
-    padding: 0px 10px;
-    align-items: center;
-
-
-}
-nav button{
-    background-color: #D6AF3B;
-    border-radius: 10px;
-    border: none;
-    height: 60px;
-    width: 150px;
-    font-size: 25px;
-    font-family: 'Inter', sans-serif;
-
- 
-}
-nav img{
-    width: 240px;
-    height: 100px;
-}
-nav .nav-links {
-    font-size: 25px;
-    list-style: none;
-    gap: 50px;
-    display: flex;
-    justify-content: space-between;
-align-items: center;
-
-}
-<<<<<<< HEAD
-=======
-nav ul {
-    display: block;
-}
-nav button {
-    display: block;
-}
->>>>>>> bb2b8f028dd327719162f782f1ac619674df1d0d
-nav .nav-links li a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Itim', cursive;
-
-}
-<<<<<<< HEAD
-
-.sec-title{
-    margin-right: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row-reverse;
-}
-
-.sec-title h2{
-    margin-right: 680px;
-    flex-direction: row-reverse;
-    justify-content: center;
-    font-size: 32px;
-    font-family: 'Arial Rounded MT Bold', sans-serif;
-}
-
-.sec-title hr {
-    display: flex;
-    background-color: black;
-    border: 2px solid;
-    margin-left: 0px;
-    margin-right: 0px;
-    width: 616px;
-
-}
-
-.info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    align-items: center;
-    height: 100vh; 
-    margin-top: -82px;
-}
-
-.text {
-    font-size: 35px;
-    font-family: "Inter", sans-serif;
-}
-
-pre{
-    font-family: "Inter", sans-serif;
-    font-size: 39px;
-}
-
-.image {
-    text-align: center;
-}
-
-.image img {
-    max-width: 100%;
-    height: auto;
-}
-
-.back{
-    background-color: #D6AF3B;
-    width: 1090px;
-    height: 662px;
-    margin-left: 50px;
-    border-radius: 12px;
-}
-
-h3{
-    font-family: 'Arial Rounded MT Bold', sans-serif;
-    margin-left: 27px;
-    position: relative;
-    top: 22px;
-    font-size: 40px;
-}
-
-.back-img{
-    flex: 1;
-    text-align: right;
-    position: relative;
-    left: 140px;
-    bottom: 350px;
-}
-
-.team{
-    margin-top: 0px;
-}
-
-.deu-back{
-    background-color: #D6AF3B;
-    width: 1170px;
-    height: 520px;
-    position: relative;
-    bottom: -430px;
-    left: 250px;
-    border-radius: 6px;
-    z-index: -1;
-}
-
-.img-inf{
-    text-align: center;
-}
-
-.img-inf img{
-    position: relative;
-    top: -278px;
-    margin-right: 170px;
-    max-width: 80%;
-    height: auto;
-}
-
-.tri-back{
-    background-color: white;
-    width: 910px;
-    height: 420px;
-    border-radius: 6px;
-    border: #868383 solid 2px;
-}
-.our{
-    position: absolute;
-    top: 288%;
-    left: 100px;
-}
-.our h3{
-    position: relative;
-    top: 104px;
-}
-
-.tri-back pre{
-    font-size: 30px;
-    margin: 0px;
-    position: relative;
-    top: 80px;
+@media screen and (max-width: 768px) {
+    .invest {
+        width: 100%;
+    }
 }
 
 
 
-.fin-back{
-    background-color: #D6AF3B;
-    width: 1170px;
-    height: 520px;
-    position: relative;
-    bottom: -470px;
-    left: 250px;
-    border-radius: 6px;
-    z-index: -1;
+/*Nav*/
+@media screen and (max-width: 768px) {
+    .show {
+        display: block;
+    }
+
+    nav .nav-links {
+        display: none;
+    }
+
+    .burger {
+        display: block;
+        gap: 5px;
+    }
+
+    nav button {
+        display: none;
+    }
+    .input-group input{
+        margin-left: 50px;
+    }
 }
 
-.img-histo img{
-    max-width: 1145px;
-    height: auto;
-    margin-left: 231px;
-    position: relative;
-    top: -235px;
-}
 
-.histo{
-    position: absolute;
-    top: 461%;
-    left: 550px;
-}
-
-.histo h3{
-    position: relative;
-    top: 120px;
-    right: 215px;
-    margin-left: 500px;
-}
-
-.histo-info{
-    background-color: white;
-    width: 850px;
-    height: 645px;
-    border-radius: 6px;
-    border: #868383 solid 2px;
-
-}
-
-.histo-info pre{
-    font-size: 36px;
-    margin: 0px;
-    position: relative;
-    top: 125px;
-}
+@media screen and (max-width: 768px) {
+   
+    .sec-title{
+        margin-right: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row-reverse;
+        position: relative;
+        top: 20px;
+    }
     
-=======
-.burger {
-    display: none;
-    cursor: pointer;
+    .sec-title h2{
+        margin-right: 0.1rem;
+        flex-direction: row-reverse;
+        justify-content: center;
+        font-size: 21px;
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+    }
+    
+    .sec-title hr {
+        display: flex;
+        background-color: black;
+        border: 2px solid;
+        margin-left: -190px;
+        margin-right: 0px;
+        width: 176px;
+    }
+    .image {
+        text-align: start;
+    }
+    
+    .image img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .text p{
+        font-size: 14px;
+        margin-left: 2%;
+        margin-top: -2%;
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column-reverse;
+        position: relative;
+        top: -38%;
+    }
+    
+    .back{
+        background-color: #D6AF3B;
+        width: 88%;
+        height: 28%;
+        margin-left: 19px;
+        position: relative;
+        bottom: 32%;
+    }
+
+    .min-back h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        margin-left: 3%;
+        position: relative;
+        top: 7px;
+        font-size: 18px;
+    }
+
+    .back-text pre{
+        font-size: 10px;
+    }
+
+    .back-img{
+        text-align: right;
+        /* position: relative; */
+        left: 7%;
+        bottom: 44%;
+    }
+
+    .back-img img{
+        text-align: right;
+        /*position: relative;*/
+        bottom: 48%;
+        width: 54%;
+        left: 0%;
+    }
+
+    .team{
+        margin-top: 0%;
+    }
+    .deu-back{
+        background-color: #D6AF3B;
+        width: 73%;
+        height: 170px;
+        position: relative;
+        bottom: 86px;
+        left: 87px;
+        border-radius: 6px;
+        z-index: -1;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-inf img{
+        margin-right: 10%;
+        max-width: 80%;
+        height: auto;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .tri-back{
+        background-color: white;
+        width: 120%;
+        height: 200px;
+        border-radius: 6px;
+        border: #868383 solid 2px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    .our{
+        position: relative;
+        top: -383px;
+        left: 36px;
+        margin-right: 30%;
+    }
+    .our h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        position: relative;
+        top: 45px;
+        left: 4%;
+        font-size: 19px;
+    }
+    
+    .tri-back p{
+        font-size: 13px;
+        margin-left: 6px;
+        position: relative;
+        top: 16px;
+    }
+
+    .end{
+        margin-top: -60%;
+        margin-bottom: 20%;
+    }
+    
+    
+    .fin-back{
+        background-color: #D6AF3B;
+        width: 80%;
+        height: 144px;
+        position: relative;
+        bottom: 52px;
+        left: 14%;
+        border-radius: 6px;
+        z-index: -1;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    .img-histo img{
+        max-width: 80%;
+        height: auto;
+        margin-left: 8%;
+        position: relative;
+        top: -235px;
+    }
+    
+    .histo{
+        position: relative;
+        top: -370px;
+        left: 100px;
+        margin-right: 41%;
+    }
+    
+    .histo-tit h3{
+        font-family: 'Arial Rounded MT Bold', sans-serif;
+        font-size: 19px;
+        position: relative;
+        top: 50px;
+        right: 286px;
+        margin-left: 160%;
+        white-space: nowrap;
+    }
+    
+    .histo-info{
+        background-color: white;
+        width: 109%;
+        height: 200px;
+        border-radius: 6px;
+        border: #868383 solid 2px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        
+    }
+    
+    .histo-info p{
+        font-size: 11px;
+        margin: 0px;
+        position: relative;
+        top: 20%;
+        right: -3px;
+    }
+}
+footer {
+    width: 100%;
+    height: 470px;
+    background-color: black;
+    display: flex;
+    color: white;
     flex-direction: column;
-    gap: 10px;
 }
 
-.burger div {
-    width: 25px;
-    height: 3px;
-    background-color: black;
+footer span {
+    padding-left: 20px;
 }
->>>>>>> bb2b8f028dd327719162f782f1ac619674df1d0d
+
+span img {
+    height: 120px;
+    width: 25%;
+}
+
+footer .footer-details {
+    display: flex;
+    justify-content: space-around;
+    padding: 0 20px;
+    position: relative;
+    font-size: 25px;
+}
+
+footer .footer-details ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+footer .footer-details .explore {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+footer .footer-details h3 {
+    font-family: 'Itim', cursive;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+footer .sponsor .m {
+    height: 100px;
+    width: 100%;
+}
+
+footer .sponsor .v {
+    height: 45px;
+    width: 100%;
+}
+
+.sponsor {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    
+    footer .footer-details {
+        font-size: 10px;
+    }
+    footer {
+        height: 310px;
+        position: relative;
+        bottom: 375px;
+    }
+    .sponsor {
+        align-items: center;
+        margin-top: -25px;
+    }
+    span img {
+        height: 80px;
+        width: 50%;
+    }
+    footer .sponsor .m {
+        width: 50%;
+        height: 50%;
+    }
+    footer .sponsor .v {
+        width: 90%;
+        height: 10%;
+    }
+}
+
+.container{
+    padding: 2rem;
+}
+.slider-wrapper{
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+.slider{
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem --0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+.slider img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+.slider-nav a{
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+.slider-nav a:hover{
+    opacity: 1;
+}
+.slider::-webkit-scrollbar {
+    display: none;
+}
