--- a/css/Home.css
+++ b/css/Home.css
@@ -4,7 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
 
 
-    
+    a {
+        text-decoration: none;
+        color: black;
+    }
 
 h1{
     margin: 0;
@@ -217,6 +220,19 @@ header .header-btn{
     align-items: center;
     gap: 25px;
 }
+.down-arrow {
+    width: 20px; /* Adjust as needed */
+    animation: bounce 1s infinite; /* Infinite bounce animation */
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0); /* Starting position */
+    }
+    50% {
+        transform: translateY(20px); /* Move down by 10px */
+    }
+}
 header .header-btn img{
     height: 120px;
     width: 100px;
@@ -315,7 +331,6 @@ header .header-btn img{
     text-align: center;
     font-size: 18px;
     padding: 10px;
-    background-color: #fff;
 }
 
 .stat-circle p {
@@ -326,7 +341,7 @@ header .header-btn img{
 }
 footer {
     width: 100%;
-    height: 410px;
+    height: 430px;
     background-color: black;
     display: flex;
     color: white;
@@ -353,16 +368,24 @@ footer .footer-details ul {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-
+text-decoration: none;
     
  
+}
+footer .footer-details ul li a{
+    text-decoration: none;
+    color: white;
 }
 
 footer .footer-details .explore{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+ 
 }
+
+
+
 
 footer .footer-details  h3 {
   font-family: 'Itim', cursive; 
@@ -457,7 +480,7 @@ footer .sponsor .v {
         height: 50%;
     }
     footer .sponsor .v {
-        width: 90%;
+        width: 10%;
         height: 10%;
     }
 
@@ -473,7 +496,7 @@ footer .sponsor .v {
 
     }
     header p{
-        font-size: 40px;
+        font-size: 166%;
     }
     header .title h1 {
         font-family: 'Chakra Petch', sans-serif;
@@ -483,12 +506,12 @@ footer .sponsor .v {
         top: -50px;
     }
     footer .sponsor .m {
-        width: 50%;
-        height: 50%;
+        width: 20%;
+        height: 30%;
     }
     footer .sponsor .v {
-        width: 90%;
-        height: 10%;
+        width: 65%;
+        height: 15%;
     }
 
 }
