--- a/css/Pret.css
+++ b/css/Pret.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Castoro&display=swap');
-
-
 h1 {
     margin: 0;
 }
@@ -14,21 +8,305 @@ body {
     width: 100%;
 }
 
+.pret img {
+    max-width: 100%;
+}
+
+.invest {
+    display: flex;
+    align-self: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+    margin-top: 50px;
+}
+
+.calculator {
+    width: 100%;
+    max-width: 70%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    flex-wrap: wrap;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    margin-left: 50px;
+
+}
+.res {
+    display: flex;
+    justify-content: space-around;
+
+}
+.input-group {
+    display: flex;
+    justify-content: space-around;
+
+}
+.input-group input{
+    border: none;
+    width: 70px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: large;
+    background-color: #efefef9a;
+   
+}
+
+.calc {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: large;
+    font-weight: bold;
+    padding-right: 10px;
+
+}
+
+h2 {
+    text-align: center;
+}
+
+.avantage_content {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.calculator,
+.payment {
+    width: 45%;
+    max-width: 80%;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 8px 6px 6.8px #D6AF3B;
+}
+
+.payment {
+    width: 45%;
+    max-width: 85%;
+    /* padding: 20px; */
+    margin-left: 30px;
+
+}
+#avantage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.avantage {
+    /* padding: 50px 50px; */
+    border-radius: 4px;
+    box-shadow: 8px 6px 6.8px #D6AF3B;
+    width: 99%;
+    /* margin-left: 10px; */
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 60px;
+    /* padding-top: 30px; */
+    margin-top: 80px;
+    margin-bottom: 70px;
+}
+
+.avantage_content {
+    /* display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 50px;
+    text-align: center; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    gap: 10em;
+    
+    /* padding: 0px 20px; */
+}
+
+.contact_box {
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact form {
+    max-width: 100%;
+    width: 100%;
+    max-width: 550px;
+    position: relative;
+}
+
+img {
+    max-width: 100%;
+}
+
+.formulaire {
+    display: flex;
+    flex-direction: column;
+}
+
+#button {
+    display: flex;
+    justify-content: center;
+}
+
+.calculator button {
+    width: 20%;
+    background-color: #D6AF3B;
+    border: none;
+    border-radius: 8px;
+    font-size: 25px;
+    font-weight: 500;
+    cursor: pointer;
+    padding: 10px;
+    margin-bottom: 20px;
+
+
+}
+
+/* Media Queries for responsiveness */
+@media (max-width: 768px) {
+
+    .calculator,
+    .payment {
+        width: 45%;
+    }
+
+    .calc {
+        gap: 30px;
+    }
+
+    .avantage_box,
+    .avantage_content {
+        padding: 0px 50px;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .calc {
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .contact form {
+        width: 90%;
+    }
+
+    .calculator button {
+        width: 50%;
+    }
+
+    .avantage {
+        padding: 20px 10px;
+        width:88%;
+    }
+    .avantage_content{
+        gap: 20px;
+    }
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: #EFEFEF;
+    padding: 0px 10px;
+    align-items: center;
+}
+
+nav button {
+    background-color: #D6AF3B;
+    border-radius: 10px;
+    border: none;
+    height: 60px;
+    width: 150px;
+    font-size: 25px;
+    font-family: 'Inter', sans-serif;
+}
+
+nav img {
+    width: 240px;
+    height: 100px;
+}
+
+nav .nav-links {
+    font-size: 25px;
+    list-style: none;
+    gap: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul {
+    display: block;
+}
+
+nav button{
+    background-color: #D6AF3B;
+    border-radius: 10px;
+    border: none;
+    height: 60px;
+    width: 150px;
+    font-size: 25px;
+    font-family: 'Inter', sans-serif;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+
+
+ 
+}
+nav button:hover {
+    background-color: rgba(214, 175, 59, 0.7);
+    transform: scale(0.8); 
+    box-shadow: black;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); 
+
+}
+
+
+nav button:active {
+    transform: scale(1.05); 
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); 
+
+}
+nav button  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+nav .nav-links li a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Itim', cursive;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .burger img {
     width: 45px;
     height: 45px;
-
 }
+
 .show {
+    display: block;
+}
+
+.hide {
     display: none;
 }
-.hide {display: none;}
+
 .mobile-menu {
     display: none;
     position: absolute;
     top: 100px;
     right: 0;
-    width: 20%;
+    width: 30%;
     height: 40%;
     background-color: #EFEFEF;
     z-index: 10;
@@ -40,7 +318,6 @@ body {
     color: black;
 }
 
-/* Visible when the burger is clicked */
 .mobile-menu.active {
     display: flex;
 }
@@ -50,8 +327,6 @@ body {
     padding: 0;
     margin: 20px 0;
     color: black;
-    z-index: 100;
-
 }
 
 .mobile-menu li {
@@ -65,207 +340,270 @@ body {
     font-family: 'Itim', cursive;
 }
 
+/*content*/
 
-
-/* Responsive burger menu visible on smaller screens */
-
-nav {
-    display: flex   ;
-    justify-content: space-between;
-    background-color: #EFEFEF;
-    padding: 0px 10px;
-    align-items: center;
-
-
-}
-nav button{
-    background-color: #D6AF3B;
-    border-radius: 10px;
-    border: none;
-    height: 60px;
-    width: 150px;
-    font-size: 25px;
-    font-family: 'Inter', sans-serif;
-
- 
-}
-nav img{
-    width: 240px;
-    height: 100px;
-}
-nav .nav-links {
-    font-size: 25px;
-    list-style: none;
-    gap: 50px;
-    display: flex;
-    justify-content: space-between;
-align-items: center;
-
-}
-nav ul {
-    display: block;
-}
-nav button {
-    display: block;
-}
-nav .nav-links li a{
-    color: black;
-    text-decoration: none;
-    font-family: 'Itim', cursive;
-
-}
-.burger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    gap: 10px;
+@media screen and (max-width: 768px) {
+    .invest {
+        width: 100%;
+    }
 }
 
-.burger div {
-    width: 25px;
-    height: 3px;
-    background-color: black;
-}
 
-.pret {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: url(/img/jakub-zerdzicki-ykgLX_CwtDw-unsplash.jpg);
-    background-size: cover;
-    background-position: center;
-    display: grid;
-    grid-template-columns: (1, 1fr);
-    align-items: center;
-}
 
-.invest {
-    padding: 50px;
-    display: flex;
-    gap: 3rem;
-}
-
-.calculator {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    box-shadow: #D6AF3B;
-    border-radius: 4px;
-    border: #D6AF3B;
-}
-
-.calc {
-    display: flex;
-    justify-content: space-between;
-    font-size: large;
-    font-weight: bold;
-    gap: 300px;
-}
-
-.calc_titre {
-    text-align: center;
-}
-
-.avantage_content {
-    display: flex;
-
-}
-
-.calculator {
-    width: 45%;
-    border-radius: 4px;
-    cursor: pointer;
-    box-shadow: 8px 6px 6.8px#D6AF3B;
-    padding: 0px 30px;
-    align-items: center;
-}
-
-.payment {
-    width: 45%;
-    border-radius: 4px;
-    cursor: pointer;
-    box-shadow: 8px 6px 6.8px#D6AF3B;
-    padding: 0px 30px;
-}
-
-.avantage {
-    padding: 50px 10px;
-    border-radius: 4px;
-    box-shadow: 8px 6px 6.8px #D6AF3B;
-    width: 95%;
-}
-
-.avantage_box {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    text-align: center;
-    padding: 0px 50px;
-}
-
-.avantage_content {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    text-align: center;
-    padding: 0px 50px;
-    font-size: large;
-}
-
-.contact_box {
-    margin: 30px;
-    display: flex;
-    justify-content: center;
-}
-
-.contact form {
-    max-width: 100%;
-    width: 550px;
-    position: relative;
-}
-
-.contact img {
-    padding: 0px 20px;
-}
-
-.formulaire {
-    display: flex;
-}
-
-.calc .botton {
-    display: flex;
-    justify-content: center;
-}
-
-.calculator button {
-    width: 20%;
-    background-color: #D6AF3B;
-    border: none;
-    border-radius: 8px;
-    font-size: 25px;
-    font-weight: 500;
-    cursor: pointer;
-}
-@media screen and ( max-width: 768px) {
+/*Nav*/
+@media screen and (max-width: 768px) {
     .show {
         display: block;
     }
-  
 
-
-    .burger {display: block;
-    gap: 5px;}
-    nav .nav-links ul {
-        display: none;
-    }
-    nav  button {
-        display: none;
-    }
-    
-  
     nav .nav-links {
         display: none;
     }
-   
+
+    .burger {
+        display: block;
+        gap: 5px;
+    }
+
+    nav button {
+        display: none;
+    }
+    .input-group input{
+        margin-left: 50px;
+    }
+}
+
+footer {
+    width: 100%;
+    height: 430px;
+    background-color: black;
+    display: flex;
+    color: white;
+    flex-direction: column;
+ 
+}
+
+footer span {
+    padding-left: 20px;
+}
+span img {
+    height: 120px;
+    width: 25%;
+}
+footer .footer-details{
+    display: flex;
+    justify-content: space-around;
+    padding: 0 20px;
+    position: relative;
+    font-size: 25px;
+}
+footer .footer-details ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+text-decoration: none;
+    
+ 
+}
+footer .footer-details ul li a{
+    text-decoration: none;
+    color: white;
+}
+
+footer .footer-details .explore{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+ 
+}
+
+
+
+
+footer .footer-details  h3 {
+  font-family: 'Itim', cursive; 
+  font-weight: bold;
+  margin-bottom: 10px;
+
+}
+footer .sponsor .m {
+    height: 100px;
+    width: 100%;
+}
+footer .sponsor .v {
+    height: 45px;
+    width: 100%;
+}
+
+.sponsor{
+    display: flex;
+    flex-direction: column;
+}
+
+/*footer*/
+@media screen and (max-width: 768px) {
+    footer .footer-details {
+        font-size: 10px;
+    }
+
+    footer {
+        height: 280px;
+    }
+
+    .sponsor {
+        align-items: center;
+        margin-top: -25px;
+    }
+
+    span img {
+        height: 80px;
+        width: 50%;
+    }
+
+    footer .sponsor .m {
+        width: 50%;
+        height: 50%;
+    }
+
+    footer .sponsor .v {
+        width: 90%;
+        height: 10%;
+    }
+}
+
+
+
+
+
+
+
+article h2{
+    padding-bottom: 30px;
+}
+aside{
+    display: flex;
+    gap:5em;
+}
+aside form{
+    margin-top: -20px;
+}
+.button {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    margin-bottom: 40px;
+}
+.button button{
+    font-size: large;
+    font-weight: bolder;
+    text-align: center;
+    width: 8em;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    background-color: #d6af3b;
+    border-radius: 10px;
+    margin: 30px auto  ; 
+}
+input::placeholder{
+    font-size: larger;
+    font-weight: bolder;
+    color: black;
+}
+input[type="text"],textarea {
+    width: 85%;
+    height: 40px;
+    padding: 10px;
+    border: none;
+    border-bottom: 2px solid black;
+    padding-top: 30px;
+    
+}
+
+input[type="text"]:focus,textarea:focus {
+    border-bottom: 2px solid #D6AF3B; 
+    outline: none;
+}
+
+@media screen and (max-width: 768px) {
+    aside{
+        flex-direction: column;
+    }
+    aside.inputs{
+        justify-content: center;
+        align-items: center;
+
+    }
+
+}
+@media screen and ( max-width: 1024px)  {
+    nav .nav-links {
+       font-size: 100%;
+       padding-right: 10px;
+    }
+    .calculator,
+    .payment {
+        width: 45%;
+    }
+    nav button{
+        font-size: 20px;
+
+    }
+    header p{
+        font-size: 166%;
+    }
+    header .title h1 {
+        font-family: 'Chakra Petch', sans-serif;
+        font-size: 70px;
+        position: relative;
+        font-weight: 300;
+        top: -50px;
+    }
+    footer .sponsor .m {
+        width: 20%;
+        height: 30%;
+    }
+    footer .sponsor .v {
+        width: 65%;
+        height: 15%;
+    }
+     .invest {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .calculator,
+    .payment {
+        width: 100%;
+        box-sizing: border-box; 
+    }
+    .calculator{
+        margin-left:70px;
+    }
+
+    .calc {
+        gap: 15px; 
+    }
+
+    .avantage_box,
+    .avantage_content {
+        padding: 0px 30px; 
+    }
+
+    .contact form {
+        width: 90%;
+    }
+
+    .calculator button {
+        width: 50%; 
+        margin-top: 30px;
+    }
+    
+    .avantage {
+        padding: 20px 15px; 
+        width: 91%; 
+    }
+
 }
